--- a/helloworld/.vscode/settings.json
+++ b/helloworld/.vscode/settings.json
@@ -45,6 +45,7 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "list": "cpp"
     }
 }
