实现定时定量发送，利用条件变量保证服务端安全退出

--- a/helloworld/.vscode/settings.json
+++ b/helloworld/.vscode/settings.json
@@ -46,6 +46,8 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "map": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp"
     }
 }
