--- a/TCPCLIENT/.vscode/settings.json
+++ b/TCPCLIENT/.vscode/settings.json
@@ -42,6 +42,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp"
     }
 }
